--- a/public/assignment/widget/widget-chooser.html
+++ b/public/assignment/widget/widget-chooser.html
@@ -11,34 +11,46 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="navbar-brand">
-    <a href="widget-list.html" class="navbar-link">
-        <span class="glyphicon glyphicon-chevron-left"></span></a>
-    <a href="#">
-        Choose Widget</a>
+<a href="widget-list.html" class="navbar-link">
+    <span class="glyphicon glyphicon-chevron-left"></span></a>
+<a href="#">
+    Choose Widget</a>
 </div>
 </div>
 </nav>
 <div class="container-fluid">
 <ul class="list-group">
 <li class="list-group-item">
-            <a href="widget-heading.html">
-                Header</a>
+        <a href="widget-heading.html">
+            Header</a>
 </li>
 <li class="list-group-item">
     <a href="widget-image.html">
-        Image</a>
+        Label</a>
 </li>
 <li class="list-group-item">
-    <a href="widget-youtube.html">
-        YouTube</a>
+    <a href="widget-image.html">
+        HTML</a>
+</li>
+<li class="list-group-item">
+    <a href="widget-image.html">
+        Text</a>
+</li>
+<li class="list-group-item">
+<a href="widget-image.html">
+    Image</a>
+</li>
+<li class="list-group-item">
+<a href="widget-youtube.html">
+    YouTube</a>
 </li>
 </ul>
 </div>
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-    <a href="../user/profile.html" class="navbar-link">
-        <span class="glyphicon glyphicon-user"></span></a>
+<a href="../user/profile.html" class="navbar-link">
+    <span class="glyphicon glyphicon-user"></span></a>
 </p>
 </div>
 </nav>
