--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -28,94 +28,51 @@
 <ul class="list-group">
 <li class="list-group-item active">
     <div class="row">
-        <div class="col-lg-5 col-md-7 col-xs-9">
-           Name
-        </div>
-        <div class="col-lg-2 visible-lg">
-           Created
-        </div>
-        <div class="col-md-2 hidden-sm hidden-xs">
-            Accessed
-        </div>
-    </div>
-</li>
-<li class="list-group-item">
-    <div class="row">
-        <div class="col-lg-5 col-md-7 col-xs-9">
-            <a href="../page/page-list.html">
-                Address App
-            </a>
-        </div>
-        <div class="col-lg-2 visible-lg">
-            1/11/2012
-        </div>
-        <div class="col-md-2 hidden-sm hidden-xs">
-            5/6/2014
-        </div>
-        <div class="col-xs-3">
-            <a href="website-edit.html">
-                <span class="glyphicon glyphicon-cog pull-right"></span>
+        <div class="col-xs-4">Name</div>
+        <div class="col-xs-6 col-sm-3">Updated</div>
+        <div class="col-sm-3 hidden-xs">Visits</div>
+        <div class="col-xs-2">
+            <a href="website-new.html" style="color:white">
+                <span class="pull-right glyphicon glyphicon-plus"></span>
             </a>
         </div>
     </div>
 </li>
 <li class="list-group-item">
     <div class="row">
-        <div class="col-lg-5 col-md-7 col-xs-9">
-            <a href="../page/page-list.html">
-                Blog
-            </a>
-        </div>
-        <div class="col-lg-2 visible-lg">
-            2/4/2015
-        </div>
-        <div class="col-md-2 hidden-sm hidden-xs">
-            7/6/2016
-        </div>
-        <div class="col-xs-3">
+        <a href="../page/page-list.html">
+            <div class="col-xs-4">Wikipedia</div></a>
+        <div class="col-xs-6 col-sm-3">2017-07-05</div>
+        <div class="col-sm-3 hidden-xs">3,123,234</div>
+        <div class="col-xs-2">
             <a href="website-edit.html">
-                <span class="glyphicon glyphicon-cog pull-right"></span>
-            </a>
+                <span class="glyphicon glyphicon-cog pull-right"></span></a>
         </div>
     </div>
 </li>
 <li class="list-group-item">
     <div class="row">
-        <div class="col-lg-5 col-md-7 col-xs-9">
+        <div class="col-xs-4">
             <a href="../page/page-list.html">
-                Blog App
-            </a>
+                Facebook</a>
         </div>
-        <div class="col-lg-2 visible-lg">
-            2/1/2017
-        </div>
-        <div class="col-md-2 hidden-sm hidden-xs">
-            2/2/2017
-        </div>
-        <div class="col-xs-3">
+        <div class="col-xs-6 col-sm-3"></div>
+        <div class="col-sm-3 hidden-xs"></div>
+        <div class="col-xs-2">
             <a href="website-edit.html">
-                <span class="glyphicon glyphicon-cog pull-right"></span>
-            </a>
+                <span class="glyphicon glyphicon-cog pull-right"></span></a>
         </div>
     </div>
 </li>
 <li class="list-group-item">
     <div class="row">
-        <div class="col-lg-5 col-md-7 col-xs-9">
-            <a href="../page/page-list.html">
-                Script Test App
-            </a>
+        <div class="col-xs-4"><a href="../page/page-list.html">Twitter</a>
         </div>
-        <div class="col-lg-2 visible-lg">
-            11/1/2017
-        </div>
-        <div class="col-md-2 hidden-sm hidden-xs">
-            12/2/2017
-        </div>
-        <div class="col-xs-3">
+        <div class="col-xs-6 col-sm-3"></div>
+        <div class="col-sm-3 hidden-xs"></div>
+        <div class="col-xs-2">
             <a href="website-edit.html">
-                <span class="glyphicon glyphicon-cog pull-right"></span>
-            </a>
+                <span class="glyphicon glyphicon-cog pull-right"></span></a>
         </div>
     </div>
 </li>
