--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="row">
-    <div class="col-xs-4 hidden-xs">
+    <div class="col-xs-3 visible-lg jga-split-view-left">
         <div class="navbar-brand">
             <a href="website-list.html" class="navbar-link">
                 <span class="glyphicon glyphicon-chevron-left"></span>
@@ -25,9 +25,9 @@
             </a>
         </p>
     </div>
-    <div class="col-xs-12 col-sm-8">
+    <div class="col-xs-12 col-lg-9 ">
         <a href="../user/profile.html">
-            <span class="glyphicon glyphicon-chevron-left navbar-brand visible-xs"></span>
+            <span class="glyphicon glyphicon-chevron-left navbar-brand"></span>
         </a>
         <div class="navbar-brand pull-left">
             <a href="#">New Website</a>
@@ -44,7 +44,7 @@
 </nav>
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-4 hidden-xs">
+    <div class="col-xs-3 visible-lg jga-split-view-left">
 <ul class="list-group">
     <li class="list-group-item active">
         <div class="row">
@@ -108,7 +108,7 @@
     </li>
 </ul>
 </div>
-<div class="col-xs-12 col-sm-8">
+    <div class="col-xs-12 col-lg-9 jga-split-view-right">
 <label for="name">Name</label>
 <input id = "name" class="form-control" value="Blog" placeholder="Blogger"/>
 <label for="description">Description</label>
