minor changes and updates

--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="row">
-<div class="col-xs-4 hidden-xs">
+    <div class="col-xs-3 visible-lg jga-split-view-left">
     <div class="navbar-brand">
         <a href="website-list.html" class="navbar-link">
             <span class="glyphicon glyphicon-chevron-left"></span>
@@ -25,9 +25,9 @@
         </a>
     </p>
 </div>
-<div class="col-xs-12 col-sm-8">
+    <div class="col-xs-12 col-lg-9 ">
     <a href="../user/profile.html">
-        <span class="glyphicon glyphicon-chevron-left navbar-brand visible-xs"></span>
+        <span class="glyphicon glyphicon-chevron-left navbar-brand hidden-lg"></span>
     </a>
     <div class="navbar-brand pull-left">
         <a href="#">Edit Website</a>
@@ -44,7 +44,7 @@
 </nav>
 <div class="row">
 <div class="container-fluid">
-<div class="col-xs-4 hidden-xs">
+    <div class="col-xs-3 visible-lg jga-split-view-left">
 <ul class="list-group">
 <li class="list-group-item active">
 <div class="row">
@@ -57,7 +57,7 @@
 <div class="row">
     <div class="col-xs-9">
         <a href="../page/page-list.html">
-            Address App
+            Facebook
         </a>
     </div>
     <div class="col-xs-3">
@@ -71,7 +71,7 @@
 <div class="row">
     <div class="col-xs-9">
         <a href="../page/page-list.html">
-            Blog
+            Twitter
         </a>
     </div>
     <div class="col-xs-3">
@@ -85,7 +85,7 @@
 <div class="row">
     <div class="col-xs-9">
         <a href="../page/page-list.html">
-            Blog App
+            Wikipedia
         </a>
     </div>
     <div class="col-xs-3">
@@ -99,7 +99,7 @@
 <div class="row">
     <div class="col-xs-9">
         <a href="../page/page-list.html">
-            Script Test App
+            Amazon
         </a>
     </div>
     <div class="col-xs-3">
@@ -111,7 +111,7 @@
 </li>
 </ul>
 </div>
-<div class="col-xs-12 col-sm-8">
+    <div class="col-xs-12 col-lg-9 jga-split-view-right">
 <label for="name">
 Name</label>
 <input id = "name" class="form-control" value="Blog" placeholder="blogger"/>
