--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -11,104 +11,104 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="row">
-    <div class="col-xs-3 visible-lg jga-split-view-left">
-        <div class="navbar-brand">
-            <a href="website-list.html" class="navbar-link">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a href="#" class="hidden-xs">Websites</a>
-        </div>
-        <p class="navbar-text pull-right">
-            <a href="website-new.html" class="navbar-link">
-<span class="glyphicon glyphicon-plus">
-</span>
-            </a>
-        </p>
-    </div>
-    <div class="col-xs-12 col-lg-9 ">
-        <a href="../user/profile.html">
-            <span class="glyphicon glyphicon-chevron-left navbar-brand"></span>
-        </a>
-        <div class="navbar-brand pull-left">
-            <a href="#">New Website</a>
-        </div>
-    <p class="navbar-text pull-right">
+<div class="col-xs-3 visible-lg jga-split-view-left">
+    <div class="navbar-brand">
         <a href="website-list.html" class="navbar-link">
-<span class="glyphicon glyphicon-ok">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a href="#" class="hidden-xs">Websites</a>
+    </div>
+    <p class="navbar-text pull-right">
+        <a href="website-new.html" class="navbar-link">
+<span class="glyphicon glyphicon-plus">
 </span>
         </a>
     </p>
+</div>
+<div class="col-xs-12 col-lg-9 ">
+    <a href="../user/profile.html">
+        <span class="glyphicon glyphicon-chevron-left navbar-brand hidden-lg"></span>
+    </a>
+    <div class="navbar-brand pull-left">
+        <a href="#">New Website</a>
     </div>
+<p class="navbar-text pull-right">
+    <a href="website-list.html" class="navbar-link">
+<span class="glyphicon glyphicon-ok">
+</span>
+    </a>
+</p>
+</div>
 </div>
 </div>
 </nav>
 <div class="container-fluid">
 <div class="row">
-    <div class="col-xs-3 visible-lg jga-split-view-left">
+<div class="col-xs-3 visible-lg jga-split-view-left">
 <ul class="list-group">
-    <li class="list-group-item active">
-        <div class="row">
-            <div class="col-xs-9">
-                Name</div>
-            <div class="col-xs-3"></div>
+<li class="list-group-item active">
+    <div class="row">
+        <div class="col-xs-9">
+            Name</div>
+        <div class="col-xs-3"></div>
+    </div>
+</li>
+<li class="list-group-item">
+    <div class="row">
+        <div class="col-xs-9">
+            <a href="../page/page-list.html">
+                Wikipedia</a>
         </div>
-    </li>
-    <li class="list-group-item">
-        <div class="row">
-            <div class="col-xs-9">
-                <a href="../page/page-list.html">
-                    Address App</a>
-            </div>
-            <div class="col-xs-3">
-                <a href="website-edit.html">
-                    <span class="glyphicon glyphicon-cog pull-right"></span>
-                </a>
-            </div>
+        <div class="col-xs-3">
+            <a href="website-edit.html">
+                <span class="glyphicon glyphicon-cog pull-right"></span>
+            </a>
         </div>
-    </li>
-    <li class="list-group-item">
-        <div class="row">
-            <div class="col-xs-9">
-                <a href="../page/page-list.html">
-                    Blog
-                </a>
-            </div>
-            <div class="col-xs-3">
-                <a href="website-edit.html">
-                    <span class="glyphicon glyphicon-cog pull-right"></span>
-                </a>
-            </div>
+    </div>
+</li>
+<li class="list-group-item">
+    <div class="row">
+        <div class="col-xs-9">
+            <a href="../page/page-list.html">
+                Facebook
+            </a>
         </div>
-    </li>
-    <li class="list-group-item">
-        <div class="row">
-            <div class="col-xs-9">
-                <a href="../page/page-list.html">
-                    Blog App</a>
-            </div>
-            <div class="col-xs-3">
-                <a href="website-edit.html">
-                    <span class="glyphicon glyphicon-cog pull-right"></span>
-                </a>
-            </div>
+        <div class="col-xs-3">
+            <a href="website-edit.html">
+                <span class="glyphicon glyphicon-cog pull-right"></span>
+            </a>
         </div>
-    </li>
-    <li class="list-group-item">
-        <div class="row">
-            <div class="col-xs-9">
-                <a href="../page/page-list.html">
-                    Script Test App</a>
-            </div>
-            <div class="col-xs-3">
-                <a href="website-edit.html">
-                    <span class="glyphicon glyphicon-cog pull-right"></span>
-                </a>
-            </div>
+    </div>
+</li>
+<li class="list-group-item">
+    <div class="row">
+        <div class="col-xs-9">
+            <a href="../page/page-list.html">
+                Twitter</a>
         </div>
-    </li>
+        <div class="col-xs-3">
+            <a href="website-edit.html">
+                <span class="glyphicon glyphicon-cog pull-right"></span>
+            </a>
+        </div>
+    </div>
+</li>
+<li class="list-group-item">
+    <div class="row">
+        <div class="col-xs-9">
+            <a href="../page/page-list.html">
+                Amazon</a>
+        </div>
+        <div class="col-xs-3">
+            <a href="website-edit.html">
+                <span class="glyphicon glyphicon-cog pull-right"></span>
+            </a>
+        </div>
+    </div>
+</li>
 </ul>
 </div>
-    <div class="col-xs-12 col-lg-9 jga-split-view-right">
+<div class="col-xs-12 col-lg-9 jga-split-view-right">
 <label for="name">Name</label>
 <input id = "name" class="form-control" value="Blog" placeholder="Blogger"/>
 <label for="description">Description</label>
