--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 <title>Title</title>
 <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="../css/style.css" rel="stylesheet"/>
@@ -32,9 +32,6 @@
         <div class="col-xs-6 col-sm-3">Updated</div>
         <div class="col-sm-3 hidden-xs">Visits</div>
         <div class="col-xs-2">
-            <a href="website-new.html" style="color:white">
-                <span class="pull-right glyphicon glyphicon-plus"></span>
-            </a>
         </div>
     </div>
 </li>
