--- a/public/assignment/website/website-new.html
+++ b/public/assignment/website/website-new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 <title>Title</title>
 <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="../css/style.css" rel="stylesheet"/>
@@ -26,7 +26,7 @@
     </p>
 </div>
 <div class="col-xs-12 col-lg-9 ">
-    <a href="../user/profile.html">
+    <a href="website-list.html">
         <span class="glyphicon glyphicon-chevron-left navbar-brand hidden-lg"></span>
     </a>
     <div class="navbar-brand pull-left">
