--- a/public/assignment/website/website-list.html
+++ b/public/assignment/website/website-list.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="navbar-header">
 <div class="navbar-brand">
-<a href="../user/profile.html" class="navbar-link">
+<a href="../user/templates/profile.html" class="navbar-link">
 <span class="glyphicon glyphicon-chevron-left"></span>
 </a>
 <a href="#">Websites</a>
@@ -79,7 +79,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-<a href="../user/profile.html" class="navbar-link">
+<a href="../user/templates/profile.html" class="navbar-link">
     <span class="glyphicon glyphicon-user"></span>
 </a>
 </p>
