--- a/public/assignment/website/website-edit.html
+++ b/public/assignment/website/website-edit.html
@@ -126,7 +126,7 @@ Connect with friends from around the world">Social networking website.Helps you 
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-<a href="../user/profile.html" class="navbar-link">
+<a href="../user/templates/profile.html" class="navbar-link">
     <span class="glyphicon glyphicon-user"></span>
 </a>
 </p>
