--- a/public/assignment/widget/widget-list.html
+++ b/public/assignment/widget/widget-list.html
@@ -79,7 +79,7 @@ finding out the test had a patent in the works.</p>
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-<a href="../user/profile.html" class="navbar-link">
+<a href="../user/templates/profile.html" class="navbar-link">
     <span class="glyphicon glyphicon-user"></span></a>
 </p>
 </div>
