--- a/public/assignment/widget/widget-youtube.html
+++ b/public/assignment/widget/widget-youtube.html
@@ -42,7 +42,7 @@ Width</label>
 <nav class="navbar navbar-default navbar-fixed-bottom">
 <div class="navbar-header">
 <p class="navbar-text pull-right">
-    <a href="../user/profile.html" class="navbar-link">
+    <a href="../user/templates/profile.html" class="navbar-link">
         <span class="glyphicon glyphicon-user"></span></a>
 </p>
 </div>
