assignment3 user working

--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -42,9 +42,9 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="admin.html">Admin</a></li>
-            <li><a href="user/templates/login.html">Login</a></li>
-            <li><a href="user/templates/register.html">Register</a></li>
-            <li><a href="user/templates/profile.html">Profile</a></li>
+            <li><a href="views/user/templates/login.view.client.html">Login</a></li>
+            <li><a href="views/user/templates/register.view.client.html">Register</a></li>
+            <li><a href="views/user/templates/profile.view.client.html">Profile</a></li>
             <li><a href="">Logout</a></li>
             <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
