--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="">
     <title>Theme Template for Bootstrap</title>
 
+    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/jquery/jquery-ui.js"></script>
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular/angular-route.min.js"></script>
     <script src="app.js"></script>
@@ -27,6 +29,7 @@
     <script src="views/widget/controllers/widget-new.controller.client.js"></script>
     <script src="views/widget/controllers/widget-list.contoller.client.js"></script>
 
+    <script src="directives/wbdv-sortable.js"></script>
 
     <script src="services/user.service.client.js"></script>
     <script src="services/website.service.client.js"></script>
