--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -28,6 +28,7 @@
     <script src="views/widget/controllers/widget-edit.controller.client.js"></script>
     <script src="views/widget/controllers/widget-new.controller.client.js"></script>
     <script src="views/widget/controllers/widget-list.contoller.client.js"></script>
+    <script src="views/widget/controllers/flickr.controller.client.js"></script>
 
     <script src="directives/wbdv-sortable.js"></script>
 
@@ -35,6 +36,7 @@
     <script src="services/website.service.client.js"></script>
     <script src="services/page.service.client.js"></script>
     <script src="services/widget.service.client.js"></script>
+    <script src="services/flickr.service.client.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
