--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -11,6 +11,7 @@
 
     <script src="vendor/jquery/jquery.js"></script>
     <script src="vendor/jquery/jquery-ui.js"></script>
+    <script src="vendor/jquery/jquery.ui.touch-punch.min.js"></script>
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular/angular-route.min.js"></script>
     <script src="app.js"></script>
