--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -17,6 +17,11 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
 
+    <script src="vendor/angular/angular-animate.min.js"></script>
+    <script src="vendor/angular/textAngular-rangy.min.js"></script>
+    <script src="vendor/angular/textAngular-sanitize.min.js"></script>
+    <script src="vendor/angular/textAngular.min.js"></script>
+
     <script src="views/user/controllers/login.controller.client.js"></script>
     <script src="views/user/controllers/profile.controller.client.js"></script>
     <script src="views/user/controllers/register.controller.client.js"></script>
@@ -45,6 +50,9 @@
     <link href="vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href="css/textAngular.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+          rel="stylesheet" >
     <link href="css/style.css" rel="stylesheet">
 
 </head>
