--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,16 @@
     <h2>Required links</h2>
     <ul>
         <li>
-            <a href="project/index.html">Project</a>
+            <a href="project/">Project</a>
         </li>
         <li>
             <a href="assignment/">Assignment</a>
         </li>
         <li>
-            <a href="test/index.html">Test MongoDB</a>
+        <a href="test/index.html">Test MongoDB</a>
+    </li>
+        <li>
+            <a href="POC/index.html">POC</a>
         </li>
         <li>
             <a href="https://github.com/vaibhavkarnam/karnam-vaibhav-webdev1">Your public repository at GitHub.com</a>
