--- a/public/project/home.html
+++ b/public/project/home.html
@@ -23,8 +23,8 @@
 							<div>
 								<div class="collapse navbar-collapse navbar-right" id="myNavbar">
 									<ul class="nav navbar-nav">
-										<li><a data-toggle="modal" data-target="#myModal">Login</a></li>
-										<li><a data-toggle="modal" data-target="#regModal">Register</a></li>
+										<li><a href="#!/login">Login</a></li>
+										<li><a href="#!/register">Register</a></li>
 										<li><a data-toggle="modal" data-target="#regModal">About</a></li>
 										<li><a data-toggle="modal" data-target="#regModal">Profile</a></li>
 									</ul>
