--- a/public/project/index.html
+++ b/public/project/index.html
@@ -27,6 +27,7 @@
     <script src="views/user/controllers/movie.controller.client.js"></script>
     <script src="views/user/controllers/search.controller.client.js"></script>
     <script src="views/user/controllers/review.controller.client.js"></script>
+    <script src="views/user/controllers/profile-visit.controller.client.js"></script>
 
     <script src="services/user.service.client.js"></script>
     <script src="services/movie.service.client.js"></script>
