--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,236 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Web Dev Course Home Page</title>
+
+
+<title>My Profile a Personal Portfolio category Flat bootstrap Responsive  Website Template :: w3layouts</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/cobox.css" rel="stylesheet" type="text/css">
+<link href="css/portfolio.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+
+
+<link href='//fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Cinzel:400,700,900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+
+
+<script src="js/modernizr.custom.js"></script>
+
 </head>
-<body>
-    <h1>Web Dev Course Home Page</h1>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+<div class="navbar-wrapper">
+<div class="container">
 
-    <p>
-        This is your website's home page. Your home page should have a picture of yourself, link to your assignments,
-        link to your final project implementation on Heroku, link to your GitHub,
-        link to a 5 minute video demoing your project. Your home page should look
-        spectacular. You should feel proud to share your homepage with your potential employer.
-        I should feel proud to share your homepage with my colleagues.
-    </p>
+<nav class="navbar navbar-inverse navbar-static-top">
+<div class="container">
+<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <span class="sr-only">Toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+</button>
+</div>
+<div id="navbar" class="navbar-collapse collapse navbar-right">
+<ul class="nav navbar-nav link-effect">
+    <li class="active"><a href="#">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#portfolio">Projects</a></li>
+    <li><a href="/assignment/#!/">Assignments</a> </li>
+    <li><a href="#contact">Contact</a></li>
+</ul>
+</div>
+</div>
+</nav>
 
-    <h2>Required links</h2>
-    <ul>
-        <li>
-            <a href="project/">Project</a>
-        </li>
-        <li>
-            <a href="assignment/">Assignment</a>
-        </li>
-        <li>
-        <a href="test/index.html">Test MongoDB</a>
-    </li>
-        <li>
-            <a href="POC/index.html">POC</a>
-        </li>
-        <li>
-            <a href="https://github.com/vaibhavkarnam/karnam-vaibhav-webdev1">Your public repository at GitHub.com</a>
-        </li>
-    </ul>
+</div>
+</div>
+
+<!-- Banner -->
+<div class="banner">
+<ul class="rslides" id="slider">
+<li>
+<div class="banner-info">
+<h3>VAIBHAV KARNAM</h3>
+<span class="line1"></span>
+<p>Welcome to my page</p>
+<span class="line2"></span>
+<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
+</div>
+</li>
+<li>
+<div class="banner-info">
+<h3>Web Developer</h3>
+<span class="line1"></span>
+<p>Pusrsuing Masters in</p>
+<span class="line2"></span>
+<div class="social-icons">
+<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
+</div>
+</div>
+</li>
+<li>
+<div class="banner-info">
+<h3>VAIBHAV KARNAM</h3>
+<span class="line1"></span>
+<p>Computer Science</p>
+<span class="line2"></span>
+<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
+</div>
+</li>
+<li>
+<div class="banner-info">
+<h3>Web Developer</h3>
+<span class="line1"></span>
+<p>Northeastern University</p>
+<span class="line2"></span>
+<div class="social-icons">
+<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
+</div>
+</div>
+</li>
+</ul>
+</div>
+
+<div class="about-me" id="about">
+<h3 class="text-center slideanim">About Me</h3>
+<div class="container">
+<div class="row">
+<div id="homepage"class="col-md-4 col-xs-12">
+<div class="mydetails slideanim text-center">
+<img class="img-circle img-responsive" src="images/man.jpg" alt="Generic placeholder image" width="200" height="200">
+<h3>Vaibhav Karnam</h3>
+<p>Prospective Web Developer</p>
+<p><a href="https://github.com/vaibhavkarnam/karnam-vaibhav-webdev1" id ="github" class="fa fa-github">Github</a></p>
+<p class="skill-text text-center">Graduate student pursuing computer science at Northeastern University. Previously worked as a software engineer for Robert Bosch, India.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- /About -->
+<!-- Portfolio -->
+<div class="myportfolio" id="portfolio">
+<h3 class="text-center slideanim">My Portfolio</h3>
+<p class="text-center slideanim">My Recent Projects , Just "Click" on them to know More.</p>
+<section class="vertical" id="grid3d">
+<div class="grid-wrap">
+<div class="grid">
+<figure><a href="/project/#!/"><img class="slideanim" src="images/1.jpg" alt="img01"/></a>
+<a href="/project/#!/"><h3>CINEREVIEW</h3></a>
+</figure>
+</div>
+</div><!-- /grid-wrap -->
+</section>
+</div>
+<!-- /Portfolio -->
+<!-- Gallery -->
+<!-- footer -->
+<div class="contact-me" id="contact">
+<h3 class="text-center slideanim">Contact Me</h3>
+<p class="text-center slideanim">Please feel free to contact me. My contact details are given below</p>
+<div class="container">
+<footer>
+<div class="row">
+<div class="col-md-6 slideanim">
+<div class="contact-info">
+    <h4>Contact Info</h4>
+    <div class="footer-info">
+        <div>
+            <i class="glyphicon glyphicon-globe"></i>
+            <p class="p1">198 Hillside Street</p>
+            <p class="p2">Boston, MA 02120</p>
+        </div>
+        <div>
+            <i class="glyphicon glyphicon-phone-alt"></i>
+            <p class="p1">+1 857 308 7026</p>
+        </div>
+        <div>
+            <i class="glyphicon glyphicon-envelope"></i>
+            <p class="p1"><a href="mailto:myemail@something.com">karnam.v@husky.neu.edu</a></p>
+            <p class="p2"><a href="mailto:myemail@nothing.com">karnamvaibhav360@gmail.com</a></p>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+<hr>
+<div class="copyright">
+<p class="text-center">© 2016 My Profile. All Rights Reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+</div>
+<a href="#myPage" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
+</footer>
+</div>
+</div>
+<!-- /footer -->
+<!-- js files -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- js files for banner slider -->
+<script src="js/responsiveslides.min.js"></script>
+<script>
+$(window).load(function() {
+// Slideshow for banner
+$("#slider").responsiveSlides({
+maxwidth: 1920,
+speed: 1000
+});
+});
+</script>
+<!-- /js files for banner slider -->
+<!-- js files for portfolio -->
+<script src="js/classie.js"></script>
+<script src="js/helper.js"></script>
+<script src="js/grid3d.js"></script>
+<script>
+new grid3D( document.getElementById( 'grid3d' ) );
+</script>
+<!-- /js files for portfolio -->
+<!-- js files for gallery -->
+<script type="text/javascript" src="js/cobox.js"></script>
+<!-- /js files for gallery -->
+<!-- js for smooth scrolling -->
+
+<script>
+$(document).ready(function(){
+// Add smooth scrolling to all links in navbar + footer link
+$(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+// Store hash
+var hash = this.hash;
+// Using jQuery's animate() method to add smooth page scroll
+// The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+$('html, body').animate({
+scrollTop: $(hash).offset().top
+}, 900, function(){
+// Add hash (#) to URL when done scrolling (default click behavior)
+window.location.hash = hash;
+});
+});
+})
+</script>
+<!-- /js for smooth scrolling -->
+<!-- js for sliding -->
+
+<script>
+$(window).scroll(function() {
+$(".slideanim").each(function(){
+var pos = $(this).offset().top;
+var winTop = $(window).scrollTop();
+if (pos < winTop + 600) {
+$(this).addClass("slide");
+}
+});
+});
+</script>
+<!-- /js for sliding -->
+<!-- /js files -->
+
 </body>
 </html>
+Contact GitHub API Training Shop Blog About
+© 2017 GitHub, Inc. Terms Privacy Security Status Help
