code cleanup and bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-
-
-<title>My Profile a Personal Portfolio category Flat bootstrap Responsive  Website Template :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
@@ -11,15 +8,11 @@
 <link href="css/cobox.css" rel="stylesheet" type="text/css">
 <link href="css/portfolio.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-
-
-<link href='//fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Quicksand:400,700,300' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Cinzel:400,700,900' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-
-
-<script src="js/modernizr.custom.js"></script>
+    <script src="js/modernizr.custom.js"></script>
 
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -47,11 +40,9 @@
 </div>
 </div>
 </nav>
-
 </div>
 </div>
 
-<!-- Banner -->
 <div class="banner">
 <ul class="rslides" id="slider">
 <li>
@@ -60,9 +51,9 @@
 <span class="line1"></span>
 <p>Welcome to my page</p>
 <span class="line2"></span>
-<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
-</div>
+<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a></div>
 </li>
+
 <li>
 <div class="banner-info">
 <h3>Web Developer</h3>
@@ -72,8 +63,8 @@
 <div class="social-icons">
 <a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
 </div>
-</div>
-</li>
+</div></li>
+
 <li>
 <div class="banner-info">
 <h3>VAIBHAV KARNAM</h3>
@@ -81,8 +72,8 @@
 <p>Computer Science</p>
 <span class="line2"></span>
 <a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
-</div>
-</li>
+</div></li>
+
 <li>
 <div class="banner-info">
 <h3>Web Developer</h3>
@@ -90,15 +81,16 @@
 <p>Northeastern University</p>
 <span class="line2"></span>
 <div class="social-icons">
-<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span></a>
+<a href="https://www.facebook.com/vaibhav.karnam"><span class="facebook"></span>
+</a>
 </div>
 </div>
 </li>
-</ul>
-</div>
+</ul></div>
 
 <div class="about-me" id="about">
 <h3 class="text-center slideanim">About Me</h3>
+
 <div class="container">
 <div class="row">
 <div id="homepage"class="col-md-4 col-xs-12">
@@ -113,8 +105,6 @@
 </div>
 </div>
 </div>
-<!-- /About -->
-<!-- Portfolio -->
 <div class="myportfolio" id="portfolio">
 <h3 class="text-center slideanim">My Portfolio</h3>
 <p class="text-center slideanim">My Recent Projects , Just "Click" on them to know More.</p>
@@ -128,9 +118,6 @@
 </div><!-- /grid-wrap -->
 </section>
 </div>
-<!-- /Portfolio -->
-<!-- Gallery -->
-<!-- footer -->
 <div class="contact-me" id="contact">
 <h3 class="text-center slideanim">Contact Me</h3>
 <p class="text-center slideanim">Please feel free to contact me. My contact details are given below</p>
@@ -144,12 +131,10 @@
         <div>
             <i class="glyphicon glyphicon-globe"></i>
             <p class="p1">198 Hillside Street</p>
-            <p class="p2">Boston, MA 02120</p>
-        </div>
+            <p class="p2">Boston, MA 02120</p></div>
         <div>
             <i class="glyphicon glyphicon-phone-alt"></i>
-            <p class="p1">+1 857 308 7026</p>
-        </div>
+            <p class="p1">+1 857 308 7026</p></div>
         <div>
             <i class="glyphicon glyphicon-envelope"></i>
             <p class="p1"><a href="mailto:myemail@something.com">karnam.v@husky.neu.edu</a></p>
@@ -167,8 +152,6 @@
 </footer>
 </div>
 </div>
-<!-- /footer -->
-<!-- js files -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <!-- js files for banner slider -->
