--- a/public/project/index.html
+++ b/public/project/index.html
@@ -26,22 +26,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <script src="views/user/controllers/users/login.controller.client.js"></script>
-    <script src="views/user/controllers/users/profile.controller.client.js"></script>
-    <script src="views/user/controllers/users/register.controller.client.js"></script>
-    <script src="views/user/controllers/cinema/SearchMovie.controller.client.js"></script>
-    <script src="views/user/controllers/cinema/movieDetails.controller.client.js"></script>
-    <script src="views/user/controllers/cinema/review.controller.client.js"></script>
-    <script src="views/user/controllers/users/profile-visit.controller.client.js"></script>
-    <script src="views/user/controllers/admin/admin.controller.client.js"></script>
-    <script src="views/user/controllers/home.controller.client.js"></script>
+    <script src="views/controllers/users/login.controller.client.js"></script>
+    <script src="views/controllers/users/profile.controller.client.js"></script>
+    <script src="views/controllers/users/register.controller.client.js"></script>
+    <script src="views/controllers/cinema/SearchMovie.controller.client.js"></script>
+    <script src="views/controllers/cinema/movieDetails.controller.client.js"></script>
+    <script src="views/controllers/cinema/review.controller.client.js"></script>
+    <script src="views/controllers/users/profile-visit.controller.client.js"></script>
+    <script src="views/controllers/admin/admin.controller.client.js"></script>
+    <script src="views/controllers/home.controller.client.js"></script>
 
     <script src="services/user.service.client.js"></script>
     <script src="services/movie.service.client.js"></script>
     <script src="services/admin-service.service.client.js"></script>
 
-    <script src="views/user/templates/script.js"></script>
-    <script src="views/user/templates/bootstrap-responsive-tabs.js"></script>
+    <script src="views/templates/script.js"></script>
+    <script src="views/templates/bootstrap-responsive-tabs.js"></script>
 
     <!--&lt;!&ndash; Bootstrap core CSS &ndash;&gt;-->
     <!--<link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
