--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
     <div class="container">
         <div class="row">
             <div id="homepage" class="col-md-12 col-xs-12">
-                <div class="mydetails slideanim text-center">
+                <div class="mydetails slideanim text-center" id="screenMargin">
                     <p><a href="https://github.com/vaibhavkarnam/karnam-vaibhav-webdev1" id="github"
                           class="fa fa-github-square">Github</a></p>
                     <p><a href="https://www.linkedin.com/in/vaibhav-karnam-99baa5143/" id="linkedIn"
